--- a/notifier/src/main/resources/application.properties
+++ b/notifier/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.main.banner-mode=off
-server.port=8080
+server.port=8081
 spring.profiles.active=local
-spring.application.name=user
+spring.application.name=notifier
 
 
 ## h2 database
